# CS3203-Software-Engineering-Project

./: .gitignore  CMakeLists.txt  README.md  codecov.yml
.github/workflows/: actions.yaml  autotester.yaml  compile-macos.yaml  compile-windows.yaml  lint.yaml  profile-ubuntu.yaml  self-hosted.yaml
Team32/Code32/: .clang-format  .clang-tidy  CMakeLists.txt  CMakeSettings.json
Team32/Code32/lib/: catch_tools.h
Team32/Code32/tests/: Sample_queries.txt  analysis.xsl  out.xml
Team32/Tests32/: Basic_queries.txt  Basic_source.txt  Boolean_queries.txt  Calls_queries.txt  Calls_source.txt  Demo_1_queries.txt  Demo_2_queries.txt  Demo_2_source.txt  Demo_source.txt  LoadTest_2_queries.txt  LoadTest_3_queries.txt  Modifiesp_queries.txt  Modifiesp_source.txt  MultiClause_1_queries.txt  MultiClause_2_source.txt  MultiClause_3_queries.txt  MultiClause_3_source.txt  MultiClause_queries.txt  Next_queries.txt  PatternAssign_1_queries.txt  PatternAssign_1_source.txt  PatternAssign_queries.txt  PatternAssign_source.txt  PatternIf_queries.txt  PatternIf_source.txt  PatternWhile_queries.txt  PatternWhile_source.txt  Pattern_queries.txt  Pattern_source.txt  Resultclause_queries.txt  Resultclause_source.txt  SelectAttrib_queries.txt  SelectAttrib_source.txt  SelectSingle_2_queries.txt  SelectSingle_2_source.txt  SelectTuple_source.txt  SemanticErrors_queries.txt  SemanticErrors_source.txt  Simple_queries.txt  Simple_query.txt  (+18 more)
Team32/Tests32/load_tests/: LoadTestNextAffects_queries.txt  LoadTestNextAffects_source.txt  LoadTest_1_queries.txt  LoadTest_1_source.txt  LoadTest_2_source.txt  (+4 more)
(+618 files in other folders)
