cmake_minimum_required(VERSION 3.21)
project(21s2_cp_spa_team_32)

set(CMAKE_CXX_STANDARD 14)

add_executable(21s2_cp_spa_team_32 main.cpp Team32/Code32/src/spa/src/PKB/ParentStore.h Team32/Code32/src/spa/src/PKB/ParentStore.cpp Team32/Code32/src/spa/src/PKB/FollowStore.h Team32/Code32/src/spa/src/PKB/FollowStore.cpp Team32/Code32/src/spa/src/PKB/UseStore.h Team32/Code32/src/spa/src/PKB/UseStore.cpp Team32/Code32/src/spa/src/PKB/ModifyStore.h Team32/Code32/src/spa/src/PKB/ModifyStore.cpp)